--- a/src/app/table-grid/table-grid.component.html
+++ b/src/app/table-grid/table-grid.component.html
@@ -1,8 +1,19 @@
 <div class="search-form">
     <form NgForm  (keyup)="onSearch(text)">
-        <input ngModel name="text" #text type="text">
+        <input ngModel name="text" #text type="text" placeholder="search....">
     </form>
 </div>
+
+<div class="limit">
+    <select #limit (change)="onLimit(limit)" name="limit" >
+        <option value="10">Select limit</option>
+        <option value="20">20</option>
+        <option value="30">30</option>
+        <option value="50">50</option>
+        <option value="90">90</option>
+    </select>
+</div>
+
 <table class="table">
     <thead>
         <tr>
@@ -27,14 +38,4 @@
     <a href="#" (click)="onPrev()">&laquo; prev</a>
     <a href="#" (click)="onPage(pageNumber)" *ngFor="let page of [].constructor(options.totalPages); let pageNumber = index">{{pageNumber}}</a> 
     <a href="#" (click)="onNext()">next &raquo;</a>
-</div>
-
-<div class="limit">
-    <select #limit (change)="onLimit(limit)" name="limit" >
-        <option value="10">Select limit</option>
-        <option value="20">20</option>
-        <option value="30">30</option>
-        <option value="50">50</option>
-        <option value="90">90</option>
-    </select>
 </div>
