--- a/src/app/table-grid/table-grid.component.html
+++ b/src/app/table-grid/table-grid.component.html
@@ -34,6 +34,10 @@
     </tbody>
 </table>
 
+<div>
+    <p></p>
+</div>
+
 <div class="pagination">
     <a href="#" (click)="onPrev()">&laquo; prev</a>
     <a href="#" (click)="onPage(pageNumber)" *ngFor="let page of [].constructor(options.totalPages); let pageNumber = index">{{pageNumber}}</a> 
